# fastapi-obs

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_api.py
app/: __init__.py  main.py
grafana/dashboards/: fastapi-dashboard.json  tracing-dashboard.json
grafana/provisioning/datasources/: jaeger.yml
prometheus/: prometheus.yml
